Fix landing page - overlapping classes

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -2468,7 +2468,7 @@ body {
     margin-top: 1px;
 }
 
-.d-flex {
+.dflex {
     position: relative;
     overflow-x: hidden;
     width: 100%;
@@ -2477,7 +2477,7 @@ body {
 }
 
     @media (max-width: 767px) {
-        .d-flex {
+        .dflex {
             background: linear-gradient(244.35deg, #314194 37.33%, #3B4DAB 43.75%, #5457C1 50.17%, #6B6FEA 76.06%);
         }
     }
@@ -3698,7 +3698,7 @@ CMS navbars
             height: 150px;
             border-radius: 5px;
         }
-        
+
         .navbar-toggler {
             .navbar-toggler-icon {
                 background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(208, 205, 223)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
